fix overflow in quizDetails

--- a/components/QuizDetails/index.module.scss
+++ b/components/QuizDetails/index.module.scss
@@ -15,6 +15,7 @@
   background: map-get($blue, 200);
 
   padding: 1rem;
+  overflow-y: auto;
 }
 
 .card {
